# crisalid-vocab-search

./: .env.sample  .pylintrc  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  vocab_config.yaml  vocab_config_docker.yaml
.github/workflows/: cd-push_vocab_container.yaml  cd_push_api_container.yaml  cd_push_dev_main.yaml  ci_pull_request.yaml
app/: config.py  main.py  vocab_search.py
app/errors/: not_found_error.py  validation_error.py
app/models/: concepts.py  vocabs.py
app/routes/: api.py  autocomplete.py  healthness.py  search.py  vocabs.py
app/services/: vocab_service.py
app/services/proxies/: base.py  local_opensearch.py
app/settings/: app_env_types.py  app_settings.py  test_settings.py
app/utils/: parameters.py
docker/: Dockerfile  entrypoint.sh
index/: mappings.body.json  settings.json
loaders/: load_skos.py
os-vocabs/docker/: Dockerfile
os-vocabs/loaders/: load_skos.py
tests/: conftest.py  vocab_config.yaml
tests/fixtures/: common.py  os_fixtures.py  vocab_proxies_fixtures.py
tests/fixtures/data/os/: jel_autocomplete_chom_response.json
tests/models/: test_vocabs.py
tests/services/: test_vocab_service.py
tests/services/proxies/: test_local_opensearch_proxy_autocomplete.py
